fix(bib): fixed reference not wrapping

--- a/assets/css/prism-css-dark.css
+++ b/assets/css/prism-css-dark.css
@@ -6,10 +6,10 @@ pre[class*="language-"] {
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   font-size: 1em;
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
-  word-wrap: normal;
+  word-wrap: break-word;
   line-height: 1.5;
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -18,6 +18,7 @@ pre[class*="language-"] {
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
+  overflow-wrap: break-word;
 }
 
 pre[class*="language-"] {
@@ -288,6 +289,10 @@ div.code-toolbar > .toolbar > .toolbar-item > span:hover {
 .code-toolbar {
   margin: 2% auto;
   width: fit-content;
+}
+
+.language-bib{
+  text-wrap: wrap;
 }
 
 .language-bib {
